kubeflow/templates/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_cache-webhook-kubeflow.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/kfp-cache-cert
  labels:
    app: cache-server-cert-manager
  name: cache-webhook-kubeflow
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: cache-server
      namespace: kubeflow
      path: /mutate
  failurePolicy: Ignore
  name: cache-server.kubeflow.svc
  objectSelector:
    matchLabels:
      pipelines.kubeflow.org/cache_enabled: "true"
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
  timeoutSeconds: 5
